# cvms

./: AUTHORS  CITATION.cff  ChangeLog  ChangeLog.md  NEWS  NEWS.md  README  README.md  configure.ac
.github/scripts/: cvms-build.sh  cvms-test-standalone.sh
.github/workflows/: cvms-ci.yml  cvms-ucvm-ci.yml  test-ci.yml
data/: Makefile.am
src/: Makefile.am  cvms.c  cvms.h  cvms_main.f  cvms_query.c  cvms_sub.f  run_cvms_query.sh  run_cvms_txt.sh  run_vx_cvms.sh  ucvm_cvms.c  ucvm_cvms.h  vx_cvms.c
test/: Makefile  Makefile.am  Makefile.in  run_unit  test_cvms_exec.c  test_cvms_query_exec.c  test_cvms_query_exec.h  test_grid.c  test_grid_exec.c  test_helper.c  test_helper.h  test_vx_cvms_exec.c  unittest.c  unittest_defs.h
test/ref/: test-grid-extract-macos.ref
